Updated framework views
Signed-off-by: FloKnapp <office@florianknapp.de>

--- a/src/Resources/views/errors/404.phtml
+++ b/src/Resources/views/errors/404.phtml
@@ -3,8 +3,8 @@
 <?php $this->block('content') ?>
 
 <div class="box">
-    <h1>Fehler <?= $statusCode ?></h1>
-    <p><?= $message ?></p>
+    <h1 class="text-center">Error <?= $statusCode ?></h1>
+    <p class="text-center" style="margin-bottom: .2rem; margin-top: .8rem;"><?= $message ?></p>
 </div>
 
 <?php $this->endblock('content') ?>
