--- a/src/Resources/views/errors/500.phtml
+++ b/src/Resources/views/errors/500.phtml
@@ -3,7 +3,7 @@
 <?php $this->block('content') ?>
 
 <div class="box">
-    <h1>Ein Fehler ist aufgetreten</h1>
+    <h1 class="text-center">Ein Fehler ist aufgetreten</h1>
     <p><strong>Nachricht:</strong> <?= $message ?></p>
     <p><strong>Datei:</strong> <?= $file ?></p>
     <p><strong>Zeile:</strong> <?= $line ?></p>
