--- a/src/Resources/views/welcome.phtml
+++ b/src/Resources/views/welcome.phtml
@@ -4,15 +4,15 @@
 
 <div class="box">
 
-    <h1>Welcome to PHPico!</h1>
+    <h1>Welcome to <span class="font-primary">PHPico</span>!</h1>
     <p>To begin developing, you may add your first route to <strong>/app/routes.php</strong>.</p>
 
     <hr />
 
     <h2>Example</h2>
-    <code>
-    <pre>&lt;?php<br /><br />route()->add('GET', '/', function() {<br />    return response('Hello World!')<br />});</pre>
-    </code>
+    <div class="code">
+        <pre>// File: app/routes.php<br/><br />&lt;?php<br /><br />route()->add('GET', '/', function() {<br />    return response('Hello World!');<br />});</pre>
+    </div>
 
     <hr />
 
