More improvements - Integrated PSR compliance where possible - Removed unused classes - Developed simple event system - Added event trigger in various areas - Normalized HTTP status in response - Integrated simple HTTP client - Added custom Exception classes - Added Log facette - Added Session Manager - Added new json response helper

--- a/src/Resources/views/errors/404.phtml
+++ b/src/Resources/views/errors/404.phtml
@@ -1,5 +1,9 @@
 <?php $this->setLayout('layout') ?>
 
+<?php $this->block('container-width-px') ?>
+400
+<?php $this->endblock('container-width-px') ?>
+
 <?php $this->block('content') ?>
 
 <div class="box">
