--- a/src/Resources/views/errors/500.phtml
+++ b/src/Resources/views/errors/500.phtml
@@ -2,13 +2,26 @@
 
 <?php $this->block('content') ?>
 
-<div class="box">
-    <h1 class="text-center">Ein Fehler ist aufgetreten</h1>
-    <p><strong>Nachricht:</strong> <?= $message ?></p>
-    <p><strong>Datei:</strong> <?= $file ?></p>
-    <p><strong>Zeile:</strong> <?= $line ?></p>
-    <h2>Stacktrace:</h2>
+<div class="box" style="line-height: 1.5rem">
+
+    <h1 style="margin-bottom: 2rem">Error</h1>
+
+    <div class="flex">
+        <strong style="font-size: 10pt; width: 5rem;">Message:</strong> <span><?= $message ?></span>
+    </div>
+    <div class="flex">
+        <strong style="font-size: 10pt; width: 5rem;">File:</strong> <span><?= $file ?></span>
+    </div>
+
+    <div class="flex">
+        <strong style="font-size: 10pt; width: 5rem;">Line:</strong> <span><?= $line ?></span>
+    </div>
+
+    <hr />
+
+    <h2 style="margin-bottom: 0;">Stacktrace:</h2>
     <pre><?= $trace ?></pre>
+
 </div>
 
 <?php $this->endblock('content') ?>
