--- a/src/Resources/views/welcome.phtml
+++ b/src/Resources/views/welcome.phtml
@@ -1,5 +1,9 @@
 <?php $this->setLayout('layout') ?>
 
+<?php $this->block('container-width-px') ?>
+400
+<?php $this->endblock('container-width-px') ?>
+
 <?php $this->block('content') ?>
 
 <div class="box">
