Renamed project due to already existing name

--- a/src/Resources/views/phpico_welcome.phtml
+++ b/src/Resources/views/phpico_welcome.phtml
@@ -8,7 +8,7 @@
 
 <div class="box">
 
-    <h1>Welcome to <span class="font-primary">PHPico</span>!</h1>
+    <h1>Welcome to <span class="font-primary">NixPHP</span>!</h1>
     <p>To begin developing, you may add your first route to <strong>/app/routes.php</strong>.</p>
 
     <hr />
@@ -16,8 +16,8 @@
     <?php $code = <<<CODE
     // File: app/routes.php
     
-    use function PHPico\\response;
-    use function PHPico\\route;
+    use function NixPHP\\response;
+    use function NixPHP\\route;
     
     &lt;?php
     
