--- a/src/Resources/views/errors/default.phtml
+++ b/src/Resources/views/errors/default.phtml
@@ -1,15 +1,118 @@
-<?php $this->setLayout('phpico_layout') ?>
+<?php
+use function NixPHP\s;
+?>
 
-<?php $this->block('container-width-px') ?>
-400
-<?php $this->endblock('container-width-px') ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Error</title>
+    <style>
+        :root {
+            --container-width: min-content;
+        }
 
-<?php $this->block('content') ?>
+        html, body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #202020;
+            color: #DDD;
+        }
+
+        .box {
+            width: var(--container-width);
+            height: auto;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 2rem;
+            box-sizing: border-box;
+            background-color: #303030;
+            color: #AAA;
+            border-radius: .5rem;
+        }
+
+        h1 {
+            font-family: "Arial Black", sans-serif;
+            font-weight: 900;
+            font-size: 20pt;
+            color: #DDD;
+            padding: 0;
+            margin: 0;
+        }
+
+        h2 {
+            font-family: "Arial", sans-serif;
+            font-weight: 600;
+            font-size: 11pt;
+            color: #606060;
+            text-transform: uppercase;
+            margin: .5rem 0;
+            padding: 0;
+        }
+
+        .code {
+            display: block;
+            padding: .5rem 1rem;
+            box-sizing: border-box;
+            background-color: #252525;
+            width: 100%;
+            border-radius: .5rem;
+        }
+
+        hr {
+            border: none;
+            border-top: 1px solid #505050;
+            margin: 1.5rem 0;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .font-primary {
+            color: #9872cc;
+        }
+
+        .footer {
+            display: flex;
+            gap: .6rem;
+            justify-content: end;
+            font-family: Verdana, sans-serif;
+        }
+
+        a {
+            font-size: 8pt;
+            color: #DDD;
+            text-decoration: underline;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+
+        .font-light {
+            color: #EEE;
+        }
+
+        .flex {
+            display: flex;
+        }
+    </style>
+</head>
+<body>
 
 <div class="box">
     <h1 class="text-center">Error <?= $statusCode ?></h1>
     <p class="text-center" style="margin-bottom: .2rem; margin-top: .8rem;"><?= $message ?></p>
+    <?php if (isset($stackTrace)) : ?>
+    <hr />
+    <pre><?= $stackTrace ?></pre>
+    <?php endif; ?>
 </div>
 
-<?php $this->endblock('content') ?>
+</body>
+</html>
 
